pods/webapp-with-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-with-db  # Pod name
  labels:
    app: my-webapp
  spec:
    containers: # Pod has two containers
      - name: webapp
        image: nginx:latest
        ports:
          - containerPort: 80
      - name: database
        image: mongo:latest
    volumeMounts: 
      - name: db-data
        mountPath: /data/db
  volumes: 
    - name: db-data
      persistentVolumeClaim:
        claimName: database-pvc
